New boxes, background

--- a/index.html
+++ b/index.html
@@ -23,45 +23,60 @@
 	<p>
 		Please Pull the Lever:
 	</p>
+
+	<div id="wheelbox">
 	
 	<div id="wheel" class="clickable">
-		<br><br>
+		<br>
 		<img id="icon" src="icons/Linux_100.png">
 	</img>
-	<br>
+	<br><br>
 	<img id="icon" src="icons/Christmas Star_100.png">
 	</img>
-	<br>
+	<br><br>
 	<img id="icon" src="icons/Android OS_100.png">
 	</img>
 		
 	</div>
 	
 	<div id="wheel" class="clickable">
-		<br><br>
+		<br>
 		<img id="icon" src="icons/Android OS_100.png">
 	</img>
-	<br>
+	<br><br>
 	<img id="icon" src="icons/Cherry_100.png">
 	</img>
-	<br>
+	<br><br>
 	<img id="icon" src="icons/Firefox_100.png">
 	</img>
 	
 	</div>
 
 	<div id="wheel" class="clickable">
-		<br><br>
+		<br>
 		<img id="icon" src="icons/Chrome_100.png">
 	</img>
-	<br>
+	<br><br>
 	<img id="icon" src="icons/Firefox_100.png">
 	</img>
-	<br>
+	<br><br>
 	<img id="icon" src="icons/Linux_100.png">
 	</img>
 		
 	</div>
+
+
+	<div class="clickable">
+		
+		<img id="lever"src="icons/Lever Up.png">
+	</img>
+	
+		
+	</div>
+
+</div>
+
+
 </div>
 
 
