--- a/index.html
+++ b/index.html
@@ -2,82 +2,92 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
 
-<!Creating Title>
+    <!Creating Title>
 
-<title> Main Page </title>
+    <title> Main Page </title>
 
-<h1 id="heading">Welcome to CSC 4370 Project 2</h1>
+    <h1 id="heading">Welcome to CSC 4370 Project 2</h1>
 
 </head>
 
 
 <body>
 
-<div id="slotContainer">	
-	<p id="description">
-		This game gives you the chance to win the big coins! Please test your luck with our Slot Machine, Good Luck!
-	</p>	
-	<p>
-		Please Pull the Lever:
-	</p>
-
-	<div id="wheelbox">
-	
-	<div id="wheel" class="clickable">
-		<br>
-		<img id="icon" src="icons/Linux_100.png">
-	</img>
-	<br><br>
-	<img id="icon" src="icons/Christmas Star_100.png">
-	</img>
-	<br><br>
-	<img id="icon" src="icons/Android OS_100.png">
-	</img>
-		
-	</div>
-	
-	<div id="wheel" class="clickable">
-		<br>
-		<img id="icon" src="icons/Android OS_100.png">
-	</img>
-	<br><br>
-	<img id="icon" src="icons/Cherry_100.png">
-	</img>
-	<br><br>
-	<img id="icon" src="icons/Firefox_100.png">
-	</img>
-	
-	</div>
-
-	<div id="wheel" class="clickable">
-		<br>
-		<img id="icon" src="icons/Chrome_100.png">
-	</img>
-	<br><br>
-	<img id="icon" src="icons/Firefox_100.png">
-	</img>
-	<br><br>
-	<img id="icon" src="icons/Linux_100.png">
-	</img>
-		
-	</div>
+    <div id="slotContainer">
+        <p id="description">
+            This game gives you the chance to win the big coins! Please test your luck with our Slot Machine, Good Luck!
+        </p>
+        <p>
+            Please Pull the Lever:
+        </p>
+        <div class="wheel-container">
 
 
-	<div class="clickable">
-		
-		<img id="lever"src="icons/Lever Up.png">
-	</img>
-	
-		
-	</div>
+            <div id="wheel" class="clickable">
+                <br><br>
+                <img id="icon" src="icons/Linux_100.png">
+                </img>
+                <br>
+                <img id="icon" src="icons/Christmas Star_100.png">
+                </img>
+                <br>
+                <img id="icon" src="icons/Android OS_100.png">
+                </img>
 
-</div>
+            </div>
+
+            <div id="wheel" class="clickable">
+                <br><br>
+                <img id="icon" src="icons/Android OS_100.png">
+                </img>
+                <br>
+                <img id="icon" src="icons/Cherry_100.png">
+                </img>
+                <br>
+                <img id="icon" src="icons/Firefox_100.png">
+                </img>
+
+            </div>
+
+            <div id="wheel" class="clickable">
+                <br><br>
+                <img id="icon" src="icons/Chrome_100.png">
+                </img>
+                <br>
+                <img id="icon" src="icons/Firefox_100.png">
+                </img>
+                <br>
+                <img id="icon" src="icons/Linux_100.png">
+                </img>
+            </div>
+        </div>
+
+        <table class="spin-container">
+            <tr>
+                <td>Last win</td>
+                <td id="line">Total spins</td>
+                <td id="line">Bet</td>
+                <td id="line">
+                    <div id="spin-button" class="clickable">
+                      <h3><strong>Spin</strong></h3>
+                    </div>
+
+                </td>
+            </tr>
+        </table>
 
 
-</div>
+    </div>
+
+    <!---------- container for the table to display (lastWin, totalSpins, bets) --------- >
+
+
+
+
+
 
 
 </body>
