Fixed wallpaper and added table

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 	</p>
 
 	<div id="wheelbox">
+
+		<img id="table" src="Icons/SlotMachineTable.png">
 	
 	<div id="wheel" class="clickable">
 		<br>
