Fixing broken merge.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-<<<<<<< HEAD
+
 <div id="slotContainer">	
 	<p id="description">
 		This game gives you the chance to win the big coins! Please test your luck with our Slot Machine, Good Luck!
@@ -81,7 +81,7 @@
 
 
 </div>
-=======
+
     <div id="slotContainer">
         <p id="description">
             This game gives you the chance to win the big coins! Please test your luck with our Slot Machine, Good Luck!
@@ -147,17 +147,12 @@
 
 
     </div>
-
-    <!---------- container for the table to display (lastWin, totalSpins, bets) --------- >
-
-
-
-
-
->>>>>>> 54f5ff5e0f40ee0849daf8dc71ecaeb8ccc68819
-
+    
 
 </body>
 
 
 </html>
+
+    <!---------- container for the table to display (lastWin, totalSpins, bets) --------- >!>
+
