Tab name change

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <!Creating Title>
 
-<title> Main Page </title>
+<title> Slot Machine </title>
 
 <h1 id="heading">Welcome to CSC 4370 Project 2</h1>
 
