Comments to help positioning

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </p>
 
     <img id="table" src="Icons/SlotMachineTable.png">
+    <! add counter here to be under the Winnings table>
 
     <div id="wheelbox">
 
@@ -78,6 +79,8 @@
     
         
     </div>
+
+    <! add counter here to be above the Bottom Image>
     <img id="cartoon" src="icons/slotImage.jpg">
 
 </div>
