Lever is submit button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ iframe {
         Please Pull the Lever:
     </p>
 
-    <img id="table" src="Icons/SlotMachineTable.png">
+    <img id="table" src="icons/SlotMachine_Table.png">
 
     <div id="wheelbox">
 
